fix_jumping_background

--- a/weather-app/src/App.css
+++ b/weather-app/src/App.css
@@ -2,7 +2,7 @@
 .App {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
 }
 
 
